--- a/css/style.css
+++ b/css/style.css
@@ -90,10 +90,17 @@
 
 body {
   background: rgb(235, 223, 178);
+  background-image: url(/img/beer-macro_transparent2.jpg);
+  background-repeat: no-repeat;
+  background-size:cover;
+  background-attachment: fixed;
+  /* background: rgba(235, 223, 178); */
+
   line-height: 30px;
   margin: 30px 0 0 30px;
   font-family: Arial, "Helvetica Neue", 
   Helvetica, sans-serif;
+  
 }
 h1 {
   font-size: 40px;
@@ -122,13 +129,22 @@ h2 {
 h3 {
   font-size: 35px;
   margin: 30px;
-  text-decoration:overline; 
   text-decoration:underline;
   text-align: center;
 }
 .beer-text p{
   margin: 20px 0 20px 100px;
   width: 1000px;
+  display: block;
+  padding: 10px;
+
+}
+.beer-text p:hover {
+  box-shadow: 0 0 15px #623d01;
+}
+.beer-text p:hover::first-letter{
+  font-size: 34px;
+  color: #623d01;
 
 }
 
@@ -142,7 +158,7 @@ h3 {
 }
 .table-text td:hover{
 box-shadow: 0 0 25px black;
-background-image: url(/img/beer-macro.jpg);
+background-image: url(/img/beer-macro_transparent3.jpg);
 background-color:rgba(235, 223, 178, 0.9); 
 }
 
@@ -154,6 +170,7 @@ background-color:rgba(235, 223, 178, 0.9);
   padding: 30px;
   width: 300px;
   height: 500px;
+  
 }
 
 .beer-name {
@@ -229,4 +246,17 @@ textarea {
 textarea:focus {
   box-shadow: 0 0 5px inset brown;
 
+}
+.store-link {
+  color: rgb(235, 223, 178);
+  border: 1px solid brown;
+  background-color: #ae3700;
+  border-radius: 30px;
+  padding: 5px;
+}
+.store-link:hover {
+  color: brown;
+  border: 1px solid brown;
+  background-color: rgb(235, 223, 178);
+ 
 }
