--- a/css/style.css
+++ b/css/style.css
@@ -1,262 +1,416 @@
 * {
-    padding: 0;
-    margin: 0;
-    border: 0;
-  }
-  
-  
-  *,
-  *:before,
-  *:after {
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-  }
-  
-  
-  :focus,
-  :active {
-    outline: none;
-  }
-  a:focus,
-  a:active {
-    outline: none;
-  }
-  
-  
-  nav,
-  footer,
-  header,
-  aside {
-    display: block;
-  }
-  
-  
-  html,
-  body {
-    height: 100%;
-    width: 100%;
-    font-size: 100%;
-    line-height: 1;
-    font-size: 14px;
-    -ms-text-size-adjust: 100%;
-    -moz-text-size-adjust: 100%;
-    -webkit-text-size-adjust: 100%;
-  }
-  
-  
-  input,
-  button,
-  textarea {
-    font-family: inherit;
-  }
-  
-  
-  input::-ms-clear {
-    display: none;
-  }
-  button {
-    cursor: pointer;
-  }
-  button::-moz-focus-inner {
-    padding: 0;
-    border: 0;
-  }
-  a,
-  a:visited {
-    text-decoration: none;
-  }
-  a:hover {
-    text-decoration: none;
-  }
-  ul li {
-    list-style: none;
-  }
-  img {
-    vertical-align: top;
-  }
-  h1,
-  h2,
-  h3,
-  h4,
-  h5,
-  h6 {
-    font-size: inherit;
-    font-weight: 400;
-  }
+  padding: 0;
+  margin: 0;
+  border: 0;
+}
 
-  /*======================================================================================================================================*/
+*,
+*:before,
+*:after {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+}
 
+:focus,
+:active {
+  outline: none;
+}
 
+a:focus,
+a:active {
+  outline: none;
+}
+
+nav,
+footer,
+header,
+aside {
+  display: block;
+}
+
+html,
+body {
+  height: 100%;
+  width: 100%;
+  font-size: 100%;
+  line-height: 1;
+  font-size: 14px;
+  -ms-text-size-adjust: 100%;
+  -moz-text-size-adjust: 100%;
+  -webkit-text-size-adjust: 100%;
+}
+
+input,
+button,
+textarea {
+  font-family: inherit;
+}
+
+input::-ms-clear {
+  display: none;
+}
+
+button {
+  cursor: pointer;
+}
+
+button::-moz-focus-inner {
+  padding: 0;
+  border: 0;
+}
+
+a,
+a:visited {
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: none;
+}
+
+ul li {
+  list-style: none;
+}
+
+img {
+  vertical-align: top;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-size: inherit;
+  font-weight: 400;
+}
+
+/*======================================================================================================================================*/
 body {
   background: rgb(235, 223, 178);
   background-image: url(/img/beer-macro_transparent2.jpg);
   background-repeat: no-repeat;
-  background-size:cover;
+  background-size: cover;
   background-attachment: fixed;
   /* background: rgba(235, 223, 178); */
-
   line-height: 30px;
-  margin: 30px 0 0 30px;
-  font-family: Arial, "Helvetica Neue", 
-  Helvetica, sans-serif;
-  
+  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
 }
+
+.main {
+  position: relative;
+  left: 0px;
+  top: 0px;
+  max-width: 1500px;
+  margin: 0 auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
 h1 {
+  text-align: center;
   font-size: 40px;
   font-weight: 900;
   font-style: italic;
-  margin: 50px;
   background: #ccab59;
-  padding: 10px 0 10px 360px;
+  padding: 10px;
   max-width: 1110px;
   text-transform: uppercase;
-  box-shadow: 0 0 20px black;
+  -webkit-box-shadow: 0 0 20px black;
+          box-shadow: 0 0 20px black;
   border-radius: 20px;
+  position: sticky;
+  left: 0;
+  top: 20px;
+  width: 1000px;
+  z-index: 10;
 }
+
 h2 {
+  text-align: center;
   font-size: 30px;
   font-weight: 700;
   font-style: italic;
   margin: 50px;
   background: #ccab59;
-  padding: 10px 0 10px 450px;
+  padding: 10px 0 10px 0px;
   max-width: 1110px;
   text-transform: uppercase;
   border-radius: 20px;
-
+  position: sticky;
+  left: 0;
+  top: 20px;
+  width: 1000px;
+  z-index: 11;
 }
+
 h3 {
   font-size: 35px;
   margin: 30px;
-  text-decoration:underline;
+  text-decoration: underline;
   text-align: center;
+  position: sticky;
+  left: 0;
+  top: 80px;
+  z-index: -1;
 }
-.beer-text p{
-  margin: 20px 0 20px 100px;
-  width: 1000px;
+
+.beer-text {
+  margin: 20px 0px 0px 0px;
+  max-width: 1000px;
   display: block;
   padding: 10px;
-
-}
-.beer-text p:hover {
-  box-shadow: 0 0 15px #623d01;
-}
-.beer-text p:hover::first-letter{
-  font-size: 34px;
-  color: #623d01;
-
 }
 
-.table-text td{
-  /* border: 1px solid #000; */
-  max-width: 300px;
-  padding: 30px;
-  margin: 0 20px 0 20px;
+.beer-text-wrap {
+  margin: 30px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
   text-align: justify;
-
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
-.table-text td:hover{
-box-shadow: 0 0 25px black;
-background-image: url(/img/beer-macro_transparent3.jpg);
-background-color:rgba(235, 223, 178, 0.9); 
+.beer-text-wrap div:hover {
+  -webkit-box-shadow: 0 0 15px #623d01;
+          box-shadow: 0 0 15px #623d01;
+  -webkit-transition: 0.2s;
+  transition: 0.2s;
 }
 
-.table-heading {
+.beer-varieties {
+  max-width: 1300px;
+}
+.beer-varieties__item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  max-width: 270px;
+  margin: 0 20px;
+  padding: 20px;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+}
+.beer-varieties__item:hover {
+  -webkit-box-shadow: 0 0 25px black;
+          box-shadow: 0 0 25px black;
+  background-image: url(/img/beer-macro_transparent3.jpg);
+  background-color: rgba(235, 223, 178, 0.9);
+}
+.beer-varieties__row {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-flex: 0;
+      -ms-flex: 0 1 25%;
+          flex: 0 1 25%;
+}
+.beer-varieties__title {
+  font-size: 30px;
   text-align: center;
-  font-size: 25px;
+  margin: 0 0 20px 0;
 }
-.beer-image {
-  padding: 30px;
-  width: 300px;
-  height: 500px;
-  
+.beer-varieties__text {
+  text-align: justify;
 }
 
-.beer-name {
-  text-align: center;
-  font-size: 25px;
-  font-weight: 700;
-}
-.beer-info li {
-  padding-left: 50px;
-}
-.price-vantity td{
-  padding-left: 50px;
-
-}
-.beer-price {
-  font-size: 20px;
-}
-.beer-info li {
-  background-image: url(/img/check-mark.png);
-  background-repeat: no-repeat;
-  background-size: contain;
-}
 .shop-block {
-  background: #c7ba8674;
+  background: rgba(199, 186, 134, 0.4549019608);
   padding: 30px;
   max-width: 1230px;
   margin-top: 50px;
   margin-bottom: 50px;
-  
+  margin-right: 30px;
+  margin-left: 30px;
+  -webkit-transition: 0.2s;
+  transition: 0.2s;
 }
 .shop-block:hover {
-box-shadow: 0 0 50px black;
+  -webkit-box-shadow: 0 0 50px black;
+          box-shadow: 0 0 50px black;
 }
+.shop-block__wrap {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+.shop-block__row_double {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+.shop-block__item {
+  margin: 0 5px;
+  width: 250px;
+}
+.shop-block__item:hover .shop-block__title {
+  text-shadow: 0 0 50px black;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+}
+.shop-block__item:hover .shop-block__image {
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+}
+.shop-block .shop-block__image {
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+}
+.shop-block__image .beer-image {
+  padding: 30px;
+  max-width: auto;
+  max-height: 400px;
+}
+.shop-block__title {
+  text-align: center;
+  text-transform: uppercase;
+  font-size: 30px;
+  font-weight: 700;
+}
+.shop-block__about {
+  padding: 20px;
+}
+.shop-block__about li {
+  background-image: url(/img/check-mark.png);
+  background-repeat: no-repeat;
+  background-size: contain;
+  padding-left: 30px;
+}
+.shop-block__price {
+  text-align: center;
+}
+
+.snacks {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
 .snack-checkbox {
   margin: 0 5px 20px 40px;
 }
+
+.client-info {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
 .notification {
-  color:red;
+  color: red;
   margin-left: 40px;
   text-decoration: underline;
 }
 
 .input:focus {
-  box-shadow: 0 0 10px  brown;
+  -webkit-box-shadow: 0 0 10px brown;
+          box-shadow: 0 0 10px brown;
 }
+
 .input {
   border: 1px solid black;
   width: 150px;
-  height: 20px; 
+  height: 20px;
+  border-radius: 5px;
+  padding: 5px;
 }
+
 button {
   background-color: #cca447;
-  width: 100px;
-  height: 40px;
   margin: 30px 10px;
   border-radius: 30px;
   color: #623d01;
   font-size: 20px;
   font-weight: bold;
+  padding: 10px 20px;
 }
+
 button:hover {
   color: #cca447;
   background-color: #623d01;
 }
+
 button:active {
   color: white;
   background-color: #ae3700;
 }
+
 textarea {
   border: 1px solid #623d01;
-
+  border-radius: 5px;
+  padding: 5px;
 }
+
 textarea:focus {
-  box-shadow: 0 0 5px inset brown;
-
+  -webkit-box-shadow: 0 0 5px inset brown;
+          box-shadow: 0 0 5px inset brown;
 }
+
 .store-link {
   color: rgb(235, 223, 178);
   border: 1px solid brown;
   background-color: #ae3700;
   border-radius: 30px;
   padding: 5px;
+  text-wrap: nowrap;
 }
+
 .store-link:hover {
   color: brown;
   border: 1px solid brown;
   background-color: rgb(235, 223, 178);
- 
+}
+
+.a:hover > .b {
+  -webkit-filter: blur(2px);
+          filter: blur(2px);
+  -webkit-transform: scale(0.9);
+          transform: scale(0.9);
+}
+
+.a .b:hover {
+  -webkit-transform: scale(1.05);
+          transform: scale(1.05);
+  -webkit-filter: none;
+          filter: none;
 }
