--- a/#source/scss/style.scss
+++ b/#source/scss/style.scss
@@ -1,5 +1,15 @@
 @import "./null-style.scss";
 
+@keyframes blink {
+
+  0% , 100% {
+    color:red
+  }
+  50% {
+    color: #623d0100;
+  }
+  
+}
   /*======================================================================================================================================*/
 
   body {
@@ -330,11 +340,21 @@
     border: 1px solid #623d01;
     border-radius: 5px;
     padding: 5px;
-  
   }
+
   textarea:focus {
     box-shadow: 0 0 5px inset brown;
+  }
+
+  .comments__symbols-left {
+    color: #623d0193;
+    padding-left: 120px;
+  }
   
+  .red-blinking {
+    animation: blink 1s ease-in-out infinite;
+    color: red;
+    
   }
   .store-link {
     color: rgb(235, 223, 178);
@@ -370,3 +390,107 @@
   transform: scale(1.05);
   filter: none;
 }
+
+.hidden {
+  display: none;
+}
+
+.confirmation__image_file {
+  
+  display: block;
+  max-width: 300px;
+  max-height: 300px;
+}
+
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+  &:hover, &focus {
+    color: black;
+    cursor: pointer;
+  }
+}
+
+.modal__wrap {
+  display: none;
+  background: wheat;
+  position: fixed;
+  z-index: 12;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0,0,0,0.4);
+  overflow: auto;
+
+
+}
+.modal__content {
+  z-index: 12;
+  background-color: #fcfaeb;
+  margin: 20% auto;
+  padding: 20px;
+  border: 1px solid #888888;
+  width: 40%;
+  position: relative;
+
+}
+
+.to-cart{
+  display: flex;
+
+  &__button {
+    margin: 10px 40px;
+  }
+}
+
+.brewery__heading {
+  max-width: 90%;
+  }
+
+// .success-to-cart {
+//   // display: none;
+//   background: wheat;
+//   position: fixed;
+//   z-index: 12;
+//   left: 0;
+//   top: 0;
+//   width: 100%;
+//   height: 100%;
+//   background-color: rgba(0,0,0,0);
+//   overflow: auto;
+
+//   &__content {
+//     z-index: 12;
+//     background-color: #8cc461;
+//     margin: 2% auto;
+//     padding: 20px;
+//     border: 1px solid #888888;
+//     width: 40%;
+//     position: relative;
+//   }
+// }
+
+.promocodes__button_add, .promocodes__button_remove {
+  font-size: 15px;
+  background: #cdbe74;
+
+  &:disabled {
+    background: #888888;
+  }
+}
+
+.promocode__item {
+  padding: 3px 10px;
+  text-align: center;
+  background: #d8ce7d;
+  border: 1px solid #896a28;
+  border-radius: 20px;
+
+  &:focus {
+    background: #b28941;
+  }
+}
+
