--- a/css/style.css
+++ b/css/style.css
@@ -86,6 +86,23 @@ h6 {
   font-weight: 400;
 }
 
+@-webkit-keyframes blink {
+  0%, 100% {
+    color: red;
+  }
+  50% {
+    color: rgba(98, 61, 1, 0);
+  }
+}
+
+@keyframes blink {
+  0%, 100% {
+    color: red;
+  }
+  50% {
+    color: rgba(98, 61, 1, 0);
+  }
+}
 /*======================================================================================================================================*/
 body {
   background: rgb(235, 223, 178);
@@ -427,6 +444,17 @@ textarea:focus {
           box-shadow: 0 0 5px inset brown;
 }
 
+.comments__symbols-left {
+  color: rgba(98, 61, 1, 0.5764705882);
+  padding-left: 120px;
+}
+
+.red-blinking {
+  -webkit-animation: blink 1s ease-in-out infinite;
+          animation: blink 1s ease-in-out infinite;
+  color: red;
+}
+
 .store-link {
   color: rgb(235, 223, 178);
   border: 1px solid brown;
@@ -468,4 +496,80 @@ textarea:focus {
           transform: scale(1.05);
   -webkit-filter: none;
           filter: none;
+}
+
+.hidden {
+  display: none;
+}
+
+.confirmation__image_file {
+  display: block;
+  max-width: 300px;
+  max-height: 300px;
+}
+
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+.close:hover, .closefocus {
+  color: black;
+  cursor: pointer;
+}
+
+.modal__wrap {
+  display: none;
+  background: wheat;
+  position: fixed;
+  z-index: 12;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.4);
+  overflow: auto;
+}
+
+.modal__content {
+  z-index: 12;
+  background-color: #fcfaeb;
+  margin: 20% auto;
+  padding: 20px;
+  border: 1px solid #888888;
+  width: 40%;
+  position: relative;
+}
+
+.to-cart {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+.to-cart__button {
+  margin: 10px 40px;
+}
+
+.brewery__heading {
+  max-width: 90%;
+}
+
+.promocodes__button_add, .promocodes__button_remove {
+  font-size: 15px;
+  background: #cdbe74;
+}
+.promocodes__button_add:disabled, .promocodes__button_remove:disabled {
+  background: #888888;
+}
+
+.promocode__item {
+  padding: 3px 10px;
+  text-align: center;
+  background: #d8ce7d;
+  border: 1px solid #896a28;
+  border-radius: 20px;
+}
+.promocode__item:focus {
+  background: #b28941;
 }
